# KeyCap

./: .gitignore  CLAUDE.md  Hotkeys.txt  README.md  config.json  launch.bat  main.js  overlay.html  overlay_server.py  package-lock.json  package.json  preload.js  requirements.txt  test_keys.py
customThemes/: custom.json  migrated-minimal.json
docs/: recorder-browser-source-architecture.md
editor/: design.css  editor.css  editor.js  index.html  pack-card.css  theme-creator.html  theme-creator.js  theme-runtime.js
keymaps/: photoshop.json  zbrush.json
native/recorder/: Cargo.toml  README.md  build.rs  mock-sidecar.js
native/recorder/examples/: wgc_raw.rs  wgc_window.rs
native/recorder/scripts/: bench-vmaf.mjs  smoke.mjs  smoke_overlay.mjs
native/recorder/src/: convert.rs  ipc.rs  main.rs  overlay.rs  session.rs
native/recorder/src/capture/: frame.rs  gpu_pool.rs  mod.rs  stub.rs  win.rs  win_dda.rs
native/recorder/src/encoder/: cuda_sys.rs  ffmpeg.rs  mf.rs  mod.rs  nvenc.rs  nvenc_sys.rs
native/recorder/src/gpu/: bgra_upload.rs  compositor.rs  mod.rs  nv12_ring.rs  shaders.rs
packs/default/: pack.json
packs/magic-forest/: pack.json
packs/neo-tokyo/: pack.json
packs/win95/: pack.json
prototype/: get-foreground.ps1  package-lock.json  package.json  test-keys.js
server/: builtin-theme-overrides.json  config.js  index.js  keyboard.js  keymaps.js  native-recorder.js  pack-schema.js  packs.js  presets.js  runtime.js  themes.js  win32.js
spikes/browser-source-feasibility/: README.md  electron-offscreen-probe.mjs
(+3 files in other folders)
