[package]
name = "keycap-recorder"
version = "0.2.0"
edition = "2021"
description = "Native recorder sidecar for KeyCap"

[[bin]]
name = "keycap-recorder"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows-capture = "2.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
